[package]
name = "libdoh"
version = "0.9.15"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "DoH and Oblivious DoH library for the rust-doh app"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-doh"
repository = "https://github.com/jedisct1/rust-doh"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2021"

[features]
default = ["tls"]
tls = ["tokio-rustls"]

[dependencies]
anyhow = "1.0"
arc-swap = "1"
base64 = "0.22"
byteorder = "1"
bytes = "1"
futures = "0.3"
hyper = { version = "^0.14.32", default-features = false, features = [
    "server",
    "http1",
    "http2",
    "stream",
    "runtime",
] }
odoh-rs = "1.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "time",
    "sync",
] }
tracing = "0.1"
urlencoding = "2.1"
tokio-rustls = { version = "^0.24.1", features = [
    "early-data",
], optional = true }
rustls-pemfile = "^1.0"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
